--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
       </p>
       <p>2019年完成了資訊科學碩士學位，提論的主題為機器學習方法的股票預測，從中通學了AI技術，搭上熱門技能列車，在所處的金融產業中嘗試研究相關的技術
         建構許多小型專案如，AML姓名文字分析與QA問答(Jieba..)、身份證圖像識別(OPENCV)、人臉2D圖像辨識(CNN)、LineBot推播訊息(Flask)等
+        相關作品皆在Github上，歡迎參閱。
       </p>
       <p>
         對未來工作上希望能有數據分析應用、技術與學習溝通方法，充實自我且能為組織帶來能量，任務式的實現每一個可能，達到雙贏的機會。
