--- a/index.html
+++ b/index.html
@@ -203,20 +203,22 @@
                   </ul>
 <div id="myTabContent" class="tab-content"> 
   <div class="tab-pane fade show active" id="home">
-    <p>Hi,我是王靖瑤，過去經歷企業內部系統需求訪談與分析開發、系統翻寫等任務，從VB6到Delphi再到ASP單層建構的系統一一做整合性的翻新。目前正在校研習碩士學程，研究運用機器學習預測金融市場模型轉換領域，未來期望在目前的基礎之上，對金融科技、創新商業模式方向累積更多不同的實戰經歷並有機會開發產品</p>
+    <p>Hi,我是王靖瑤，過去經歷企業內部系統需求訪談與分析開發、系統翻寫等經驗，有VB6、Delphi、ASP單層建構的系統、C#一一做整合性的翻新。
+      2019年完成資訊科學碩士學位，所專精研究運用機器學習預測金融市場模型轉換領域，以對金融科技、創新商業模式方向累積更多不同的實戰經歷
+      並期望有機會利用相關技能進行市場應用</p>
       <p>
-      因熱愛新事物的研究與變化性的挑戰，熱衷於同濟間的活絡溝通，人生經歷三個月流浪在日本，重新定義自已新的適應環境，
-      2018年開始自學Python、Arduino、Node.js、Android app，語言方面也開始重新認識並學習日文，努力成為自已的知識養份，
+      對變化性的環境都會有所好奇，願意在同濟間的活絡溝通，嘗試在不同的職涯中不斷適應多變的職場環境，
+      近年開始自學Python、Arduino、Node.js、Android app，語言方面也開始重新認識並學習日文，努力成為自已的知識養份，
       </p>
-      <p>2019年完成了資訊科學碩士學位，提論的主題為機器學習方法的股票預測，從中通學了AI技術，搭上熱門技能列車，在所處的金融產業中嘗試研究相關的技術
-        建構許多小型專案如，AML姓名文字分析與QA問答(Jieba..)、身份證圖像識別(OPENCV)、人臉2D圖像辨識(CNN)、LineBot推播訊息(Flask)等
-        相關作品皆在Github上，歡迎參閱。
-      </p>
-      <p>
-        對未來工作上希望能有數據分析應用、技術與學習溝通方法，充實自我且能為組織帶來能量，任務式的實現每一個可能，達到雙贏的機會。
+      <p>從中學習AI相關技術，建構小型專案如：
+        AML姓名文字分析與QA問答(Jieba..)、身份證圖像識別(OPENCV)、人臉2D圖像辨識(CNN)、LineBot推播訊息(Flask)等
+        相關作品皆在Github上，對技能小有斬獲。
       </p>
       <p>
-      自我評論方面可能不會是任何產業上的菁英領頭，但能確信自已是最佳的幕僚伙伴齊心共進的一員，並持續開拓自已的職涯拼圖。
+        對未來工作上希望能參與數據分析應用、應用系統開發等，持續充實自我且能為組織帶來能量，實現每一個可能，達到雙贏的機會。
+      </p>
+      <p>
+      自我評論可能不會是任何產業上的菁英領頭，但能確信自已是最佳的幕僚伙伴齊心共進的一員，並持續開拓自已的職涯拼圖。
       </p>
       <p>
       更多的介紹，歡迎與我連絡，期待能為組織進一份心力。
