--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
                 <p>
                 <span data-brackets-id="6538" class="badge badge-primary">Senior Securities Specialist</span>
-                <span data-brackets-id="6538" class="badge badge-primary">Investment trust and consulting representative</span>
+                <span data-brackets-id="6538" class="badge badge-primary">Securities Investment Trust and Consulting Professionals</span>
                 <span data-brackets-id="6538" class="badge badge-primary">Sun Certified Programmer for Java</span>
                 </p>
                 <hr class="my-4">
@@ -88,9 +88,10 @@
                 <div class="card-header">FrontEnd And DB</div>
                 <div class="card-body"> 
                   <p class="card-text">1) Javascript/Jquery</p>
-                  <p class="card-text">2) Node.js</p>
-                  <p class="card-text">3) Oracle</p>
-                  <p class="card-text">4) Sqlite</p>
+                  <p class="card-text">2) Bootstrap</p>
+                  <p class="card-text">3) MS SQL</p>
+                  <p class="card-text">4) My SQL</p>
+                  <p class="card-text">5) Sqlite</p>
                 </div>
               </div>
     </div>
@@ -100,10 +101,10 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
                 <div class="card-header">BackEnd</div>
                 <div class="card-body">
-                  <p class="card-text">1) .Net C#</p>
+                  <p class="card-text">1) Web C#</p>
                   <p class="card-text">2) ASP.NET MVC</p>
-                  <p class="card-text">3) Web Service</p>
-                  <p class="card-text">4) LINQ</p>
+                  <p class="card-text">3) LINQ</p>
+                  <p class="card-text">4) PHP Laravel</p>
                 </div>
               </div>
     </div>
@@ -113,11 +114,10 @@
                 <div class="card text-white bg-info mb-3" style="max-width: 20rem;">
                 <div class="card-header">Others</div>
                 <div class="card-body">
-                  <p class="card-text">1) Android app - basic</p>
-                  <p class="card-text">2) Machine learning - stock analysis</p>
-                  <p class="card-text">3) Arduino uno - sensor</p>
-                  <p class="card-text">4) Python - Automation And Crawler...</p>
-                  <p class="card-text">5) Json - Data Transfer</p>
+                  <p class="card-text">1) Machine learning - stock analysis</p>
+                  <p class="card-text">2) Arduino uno - sensor</p>
+                  <p class="card-text">3) Python - Automation And Crawler</p>
+                  <p class="card-text">4) Json - Data Transfer</p>
                   <p class="card-text">5) Flask - Line Bot</p>
                 </div>
               </div>
