--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
   <body>
     <div class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <div class="container">
-        <a href="../" class="navbar-brand">Tobey's Home</a>
+        <a href="/TobeyResume" class="navbar-brand">Tobey's Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav">
               <li class="nav-item">
-              <a class="nav-link" href="http://infofabwhat.blogspot.tw/" target="_blank">Job Blog </a>
+              <a class="nav-link" href="http://infofabwhat.blogspot.tw/" target="_blank">.NET Job Blog </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://dotblogs.com.tw/what_s_note"  target="_blank">Job Blog </a>
             </li>
                <li class="nav-item">
-              <a class="nav-link" href="https://github.com/tobeywang"  target="_blank">Github</a>
+              <a class="nav-link" href="https://github.com/tobeywang"  target="_blank">My Github</a>
             </li>
           </ul>
 
@@ -118,7 +118,7 @@
                   <p class="card-text">2) Arduino uno - sensor</p>
                   <p class="card-text">3) Python - Automation And Crawler</p>
                   <p class="card-text">4) Json - Data Transfer</p>
-                  <p class="card-text">5) Flask - Line Bot</p>
+                  <p class="card-text">5) Flask/Node.js - Line Bot</p>
                 </div>
               </div>
             </div>
@@ -127,19 +127,40 @@
     <div class="row">
     <div class="col-lg-12">
         <h2>Experience</h2>
-        </div>
+        </div>s
     </div>
     <div></div>
 <div class="row">
           <div class="col-lg-12">
 <div class="bs-component">
     <div class="list-group">
-  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
     <div class="d-flex w-100 justify-content-between">
-      <h5 class="mb-1">金融業, Apr 2016 - Present </h5>
+      <h5 class="mb-1">奧美廣告股份有限公司, Apr 2020  - Present </h5>
       <p></p>
     </div>
-    <p class="mb-1">系統改寫與維護，企業內部系統開發建置、創新專案研究</p>
+    <p class="mb-1">企業期間性活動技術支援、LINE OA 客製後台、企業網站開發與維運、API介接</p>
+    <small>資深後端工程師</small>
+    <p class="mb-1">
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Web</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">C#</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Javascript</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Jquery</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">BootStrap</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">PHP</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Laravel</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">MySQL</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">MSSQL</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">AWS</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Git</span>
+    </p>
+  </a>
+  <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+    <div class="d-flex w-100 justify-content-between">
+      <h5 class="mb-1">國泰證券投資信託股份有限公司, Apr 2016 - Apr 2020 </h5>
+      <p></p>
+    </div>
+    <p class="mb-1">Delphi系統改寫與維護，企業內部系統開發建置</p>
     <small>系統工程師</small>
     <p class="mb-1">
         <span data-brackets-id="2773" class="badge badge-pill badge-info">WindowForm</span>
@@ -147,6 +168,7 @@
         <span data-brackets-id="2773" class="badge badge-pill badge-info">C#</span>
         <span data-brackets-id="2773" class="badge badge-pill badge-info">Delphi</span>
         <span data-brackets-id="2773" class="badge badge-pill badge-info">Javascript</span>
+        <span data-brackets-id="2773" class="badge badge-pill badge-info">Jquery</span>
         <span data-brackets-id="2773" class="badge badge-pill badge-info">BootStrap</span>
         <span data-brackets-id="2773" class="badge badge-pill badge-info">MSSQL</span>
         <span data-brackets-id="2773" class="badge badge-pill badge-info">Git</span>
@@ -203,14 +225,14 @@
                   </ul>
 <div id="myTabContent" class="tab-content"> 
   <div class="tab-pane fade show active" id="home">
-    <p>Hi,我是王靖瑤，過去經歷企業內部系統需求訪談與分析開發、系統翻寫等經驗，有VB6、Delphi、ASP單層建構的系統、C#一一做整合性的翻新。
-      2019年完成資訊科學碩士學位，所專精研究運用機器學習預測金融市場模型轉換領域，以對金融科技、創新商業模式方向累積更多不同的實戰經歷
+    <p>Hi,我是王靖瑤，過去經歷企業內部系統需求訪談與分析開發、系統重構等經驗。
+      2019年完成資訊科學碩士學位，專精研究運用機器學習預測金融市場模型轉換領域，以對金融科技、創新商業模式方向累積更多不同的實戰經歷
       並期望有機會利用相關技能進行市場應用</p>
       <p>
       對變化性的環境都會有所好奇，願意在同濟間的活絡溝通，嘗試在不同的職涯中不斷適應多變的職場環境，
       近年開始自學Python、Arduino、Node.js、Android app，語言方面也開始重新認識並學習日文，努力成為自已的知識養份，
       </p>
-      <p>從中學習AI相關技術，建構小型專案如：
+      <p>近年學習AI相關技術，獨立建構小型專案：
         AML姓名文字分析與QA問答(Jieba..)、身份證圖像識別(OPENCV)、人臉2D圖像辨識(CNN)、LineBot推播訊息(Flask)等
         相關作品皆在Github上，對技能小有斬獲。
       </p>
@@ -218,7 +240,7 @@
         對未來工作上希望能參與數據分析應用、應用系統開發等，持續充實自我且能為組織帶來能量，實現每一個可能，達到雙贏的機會。
       </p>
       <p>
-      自我評論可能不會是任何產業上的菁英領頭，但能確信自已是最佳的幕僚伙伴齊心共進的一員，並持續開拓自已的職涯拼圖。
+        自評不是任何產業上的菁英領頭，但能確信自已是最佳的幕僚伙伴齊心共進的一員，並持續開拓自已的職涯版圖。
       </p>
       <p>
       更多的介紹，歡迎與我連絡，期待能為組織進一份心力。
