--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
             <div class="h5">Backend Engineer</div>
             <p>客戶官網後台與前台資料串接,企業LineBot行銷後台開發,內部系統與活動支援,技術發展研究團隊一員</p>
             <p>合作客戶:台灣三星、佛光山、美國運通</p>
-            <p>#PHP #JavaScript #CSharp #SQL #AMS</p>
+            <p>#PHP #JavaScript #CSharp #SQL #AMS #LineBot</p>
           </div>
         </div>
       </div>
@@ -378,23 +378,24 @@
         </div>
       </div>
     </div>
-    <!-- <div class="card">
+    <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2009 - 2013</p>
+            <p>2005 - 2009</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Bachelor of Computer Science</div>
-            <p class="category">University of Computer Science</p>
-            <p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>
+            <div class="h5">資訊管理系</div>
+            <p class="category">南台科技大學</p>
+            <p>在學研究方向以企業資源管理與網頁設計相關,並發表Carriageable Mobile Chatroom 專題,透過手機、PDA等移動式裝式隨時傳遞訊息</p>
+            <p>#ASPNET #ACCESS #FEDORA #Chatroom</p>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
   </div>
 </div>
 <!-- <div class="section" id="reference">
