--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! 我是Tobey, 是一名網頁開發工程師,曾建置過多樣後台系統、網站、WebAPI等經驗</p>
+            <p>Hello! 我是Tobey, 是一名網頁開發工程師,曾建置過多個企業內部、官方網站後台、活動網站、LintBot、WebAPI、TSQL資料串接等經驗</p>
             <p>取得國立北教大資訊科學系碩士學位, 應用不同機器學習演算法於台灣股市、應答機器人、人臉分析</p>
-            <p class="">曾赴日短期打工換宿之旅,體驗不同勞動文化與風俗民情,平時不定時參與工程師公開教學直播或語言通識等課程</p>
+            <p class="">人生經歷赴日短期打工換宿,體驗新勞動文化,平時不定時參與工程師教學直播或語言通識課程</p>
+            <p class="">由高中接觸Coding至今累績6年金融業工程師經歷,建置網站、維運為主要, 從無至有建置決策輔助系統、LintBot後台系統、企業網站</p>
             <p class="">Github Blog皆展示個人Side Project
               <a href="#skill" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Learn More</a></p>
           </div>
@@ -132,7 +133,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Vue.Js</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
@@ -304,7 +305,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Web/Backend Engineer</div>
-            <p>系統開發/改寫與日常系統維運,WebApi資料串接與網站建置等</p>
+            <p>CRM、業務管理系統開發/改寫與企業內部系統維運,WebApi串接、TSQL數據整理與網站建置等</p>
             <p>成立Mansky Offical建置基金資訊公開平台-Line Bot官方帳號「Fund心投資」,打造公開資訊聊天機器人之實現
             <a href="https://www.youtube.com/watch?v=tt-rS19lDt4" target="_blank">LineBot_Fund心投資_Mansky</a>
             </p>
@@ -345,7 +346,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Web Development/PM</div>
-            <p>Delphi 系統改寫與維護,內部網頁開發建置 參與專案：基金業助下單系統、管理分析報表等
+            <p>內部系統改寫與維護建置 參與專案：基金業助下單系統、管理分析報表
 
               專案時程控制、專案評估,金融科技技術Lab實現 參與專案：投資研究系統專案導入、投資預測專案評估
               </p>
