--- a/index.html
+++ b/index.html
@@ -317,7 +317,8 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>May 2021 - April 2023</p>
-            <div class="h5">Yuanta Securities Investment Trust</div>
+            <div class="h5">Yuanta</div>
+            <div class="h5">Securities Investment Trust</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
@@ -357,7 +358,7 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <p>April 2016 - April 2020</p>
-            <div class="h5">Cathay Securities Investment Trust</div>
+            <div class="h5">Cathay</div>
             <div class="h5">Securities Investment Trust</div>
           </div>
         </div>
