--- a/index.html
+++ b/index.html
@@ -393,6 +393,7 @@
             <div class="h5">資訊科學所</div>
             <p class="category">國立台北教育大學</p>
             <p>研究機器學習演算法,應用於台灣股市預測產出高質量模型,學期間同儕間針對機器學習演算法與其架構研討,實作關於辨識、預測、對話等不同Side Project</p>
+            <p>論文研究：<a class="" href="https://hdl.handle.net/11296/762k77" target="_blank">應用機器學習於台灣加權指數預測模型之建構研究</a></p>
             <p>#MachineLearning #NeuralNetwork #爬蟲 #CNN #OCR #TF-IDF主題分析 #Jieba #Dialogflow</p>
           </div>
         </div>
