--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! 我是Tobey, 是一名軟體工程師,曾建置過企業內部網站、官方網站後台、活動網站、LintBot串接、WebAPI、TSQL資料處理等經驗</p>
-            <p>取得國立北教大資訊科學系碩士學位, 主修運用不同機器學習演算法於台灣股市預算模型研究</p>
-            <p>利用工作之餘時間對GCP、Azure、AWS提供的AI工具、Python OpenSource 建置應答機器人、人臉分析</p>
+            <p>Hello! 我是Tobey, 是一名敏感度高的軟體工程師,金融產業約7年系統問題解決與建構經驗</p>
+            <p>對行銷數據處理、企業內部網站、官方網站後台、LintBot串接、WebAPI開發等經驗</p>
+            <p>取得國立北教大資訊科學系碩士學位, 主修運用不同AI機器學習演算法於台灣股市預算模型研究</p>
+            <p>利用工作之餘在雲端平台、AI領域有所涉略</p>
             <p class="">生涯曾赴日短期打工換宿,體驗不同社會文化,不定時參與工程師教學直播或語言通識課程</p>
-            <p class="">接觸Coding工作累績多年金融業工程師經歷,接手不同系統維運, 從無至有建置決策輔助系統、LintBot後台系統、企業網站</p>
             <p class="">Github Blog皆展示個人Side Project
               <a href="#skill" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Learn More</a></p>
           </div>
