--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! 我是Tobey, 是一名敏感度高的軟體工程師,金融產業約7年系統問題解決與建構經驗</p>
+            <p>Hello! 我是Tobey, 是一名高敏感的軟體工程師,金融產業約7年系統問題解決與建構經歷</p>
             <p>對行銷數據處理、企業內部網站、官方網站後台、LintBot串接、WebAPI開發等經驗</p>
             <p>取得國立北教大資訊科學系碩士學位, 主修運用不同AI機器學習演算法於台灣股市預算模型研究</p>
             <p>利用工作之餘在雲端平台、AI領域有所涉略</p>
