--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           <div class="card-body">
             <div class="h5">Backend Engineer</div>
             <p>客戶官網後台與前台資料串接,企業LineBot行銷後台開發,內部系統與活動支援,技術發展研究團隊一員</p>
-            <p>合作客戶:台灣三星、佛光山、美國運通</p>
+            <p>合作客戶:<a href="https://page.line.me/samsungtaiwan" target="_blank">台灣三星</a>、<a href="https://www.fgsbmc.org.tw/tw/index.aspx" target="_blank">佛光山</a>、<a href="https://www.americanexpress.com/zh-tw/?inav=NavLogo" target="_blank">美國運通</a></p>
             <p>#PHP #JavaScript #CSharp #SQL #AMS #LineBot</p>
           </div>
         </div>
