--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! 我是Tobey, 是一名高敏感的軟體工程師,金融產業約7年系統問題解決與建構經歷</p>
-            <p>對行銷數據處理、企業內部網站、官方網站後台、LintBot串接、WebAPI開發等經驗</p>
-            <p>取得國立北教大資訊科學系碩士學位, 主修運用不同AI機器學習演算法於台灣股市預算模型研究</p>
-            <p>利用工作之餘在雲端平台、AI領域有所涉略</p>
-            <p class="">生涯曾赴日短期打工換宿,體驗不同社會文化,不定時參與工程師教學直播或語言通識課程</p>
+            <p>Hello! 我是Tobey, 是一名高敏感的軟體工程師,金融業7年系統問題解決與建構經歷</p>
+            <p>對數據處理、企業內部網站、官方網站後台、LintBot串接、WebAPI開發等專案經驗</p>
+            <p>取得國立北教大資訊科學系碩士學位, 主修AI機器學習演算法於台灣股市預算模型研究</p>
+            <p>利用工作之餘對雲端平台、AI領域有所涉略</p>
+            <p class="">生涯曾赴日短期打工換宿,深入不同社會文化,不定時參與開發工程、語言通識課程</p>
             <p class="">Github Blog皆展示個人Side Project
               <a href="#skill" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Learn More</a></p>
           </div>
@@ -306,8 +306,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">HR Software Engineer</div>
-            <p>HR 訓練系統、申請流程建置</p>
-            <p>#MVC #CSharp #JavaScript #SQL #Java </p>
+            <p>HR 訓練、召募、差勤相關系統日常維運、採購系統窗口</p>
+            <p>#MVC #CSharp #JavaScript #SQL </p>
           </div>
         </div>
       </div>
