--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
             <div class="row mt-3">
               <!-- <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div> -->
-              <div class="col-sm-12">ASP.Net C# ,Python ,PHP ,JavaScript ,Bootstrap ,Vue.js</div>
+              <div class="col-sm-12">ASP.Net C# ,Python ,PHP ,JavaScript ,SQL Server ,Vue.js</div>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
         </div>
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">SQL</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
