--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/myPic.jpg" alt="Image"/></a></div>
-          <div class="h2 title">Jing Yao Wang</div>
+          <div class="h2 title">Jing Yao Wang(37)</div>
           <p class="category text-white">Web Developer, ML Engineer, Backend Engineer</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
         </div>
