--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">HR Software Engineer</div>
-            <p>HR 訓練、召募、差勤相關系統日常維運、採購系統窗口</p>
+            <p>HR 訓練、召募、差勤系統維運、核心系統轉換</p>
             <p>#MVC #CSharp #JavaScript #SQL </p>
           </div>
         </div>
