--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! 我是Tobey, 是一名高敏感的軟體工程師,金融業7年系統問題解決與建構經歷</p>
-            <p>對數據處理、企業內部網站、官方網站後台、LintBot串接、WebAPI開發等專案經驗</p>
-            <p>取得國立北教大資訊科學系碩士學位, 主修AI機器學習演算法於台灣股市預算模型研究</p>
-            <p>利用工作之餘對雲端平台、AI領域有所涉略</p>
+            <p>對數據處理(SQL)、企業內部網站、後台、LintBot串接、WebAPI開發、核心系統轉換等經驗</p>
+            <p>在職期間取得國立北教大資訊科學系碩士學位, 主修AI機器學習演算法於台灣股市預算模型研究</p>
+            <p>工作之餘研修雲端平台、AI領域，對數位發展有基礎知識</p>
             <p class="">生涯曾赴日短期打工換宿,深入不同社會文化,不定時參與開發工程、語言通識課程</p>
             <p class="">Github Blog皆展示個人Side Project
               <a href="#skill" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Learn More</a></p>
