--- a/index.html
+++ b/index.html
@@ -306,8 +306,9 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">HR Software Engineer</div>
-            <p>HR 訓練、召募、差勤系統維運、核心系統轉換</p>
-            <p>#MVC #CSharp #JavaScript #SQL </p>
+            <p>HR 訓練、召募、差勤、核心系統轉換</p>
+            <p>系統供應商合約溝通等行政事務接口</p>
+            <p>#MVC #CSharp #JavaScript #SQL #VB.Net</p>
           </div>
         </div>
       </div>
@@ -324,12 +325,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Web/Backend Engineer</div>
-            <p>CRM、業務管理系統開發/改寫與企業內部系統維運,WebApi串接、TSQL數據整理與網站建置等</p>
-            <p>成立Mansky Offical建置基金資訊公開平台-Line Bot官方帳號「Fund心投資」,打造公開資訊聊天機器人之實現
-            <a href="https://www.youtube.com/watch?v=tt-rS19lDt4" target="_blank">LineBot_Fund心投資_Mansky</a>
-            </p>
-            <p>
-              <a href="https://page.line.me/luq2693t" target="_blank">直接加入Fund心投資 官方帳號</a></p>
+            <p>CRM、業務管理、決策支援全端開發、WebApi串接、數據整理與調校</p>
+            <p>報表數據與分析</p>
             <p>#Vue.Js #JavaScript #CSharp #SQL</p>
           </div>
         </div>
@@ -395,24 +392,6 @@
             <p>研究機器學習演算法,應用於台灣股市預測產出高質量模型,學期間同儕間針對機器學習演算法與其架構研討,實作關於辨識、預測、對話等不同Side Project</p>
             <p>論文研究：<a class="" href="https://hdl.handle.net/11296/762k77" target="_blank">應用機器學習於台灣加權指數預測模型之建構研究</a></p>
             <p>#MachineLearning #NeuralNetwork #爬蟲 #CNN #OCR #TF-IDF主題分析 #Jieba #Dialogflow</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body cc-education-header">
-            <p>2005 - 2009</p>
-            <div class="h5">Bachelor's Degree</div>
-          </div>
-        </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
-            <div class="h5">資訊管理系</div>
-            <p class="category">南台科技大學</p>
-            <p>在學研究方向以企業資源管理與網頁設計相關,並發表Carriageable Mobile Chatroom 專題,透過手機、PDA等移動式裝式隨時傳遞訊息</p>
-            <p>#ASPNET #ACCESS #FEDORA #Chatroom</p>
           </div>
         </div>
       </div>
