--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/myPic.jpg" alt="Image"/></a></div>
           <div class="h2 title">Jing Yao Wang</div>
-          <p class="category text-white">Web Developer, ML Engineer, Backend Engineer</p>
+          <p class="category text-white">Web Developer, ML Engineer, Full Stack Engineer</p>
           <a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
         </div>
       </div>
@@ -74,7 +74,7 @@
             <div class="h4 mt-0 title">About</div>
             <p>Hello! 我是Tobey, 是一名高敏感的軟體工程師,金融業7年系統問題解決與建構經歷</p>
             <p>對數據處理與調校(SQL)、企業內部網站、後台、LintBot串接、WebAPI開發、核心系統轉換等經驗</p>
-            <p>持有國立北教大資訊科學系碩士學位, 主修AI機器學習演算法於台灣股市預算模型研究</p>
+            <p>擁有國立北教大資訊科學系碩士學位, 主修AI機器學習演算法於台灣股市預算模型研究</p>
             <p>積極對雲端平台、AI領域，數位發展研修</p>
             <p>職涯期間赴日短期打工換宿,深入不同社會文化,不定時參與開發工程、語言通識課程</p>
             <p class="">Github Blog皆展示個人Side Project
