--- a/pdf/pdf_sample.html
+++ b/pdf/pdf_sample.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PDF檔案嵌入範例</title>
+    <title>書面審查資料_邱郁雯</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,14 +32,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>PDF檔案嵌入範例</h1>
-           <h2>使用 object 標籤嵌入</h2>
-        <object class="pdf-container" data="https://pdfobject.com/pdf/sample.pdf" type="application/pdf">
-            <p>您的瀏覽器不支援PDF嵌入，請<a href="https://pdfobject.com/pdf/sample.pdf">點擊此處</a>下載PDF檔案。</p>
-        </object>
-        <!-- 使用 iframe 標籤 -->
-        <h2>使用 iframe 標籤嵌入</h2>
-        <iframe class="pdf-container" src="https://pdfobject.com/pdf/sample.pdf"></iframe>
+        <h1>書面審查資料_邱郁雯</h1>
+        <iframe class="pdf-container" src="書面審查資料_邱郁雯.pdf"></iframe>
     </div>
 </body>
 </html>
