--- a/index_pdf.html
+++ b/index_pdf.html
@@ -252,9 +252,9 @@
                             <div class="job-date">May 2023 – Present</div>
                         </div>
                         <ul>
-                            <li>負責訓練、召募、差勤系統維護與HRIS核心系統轉換專案，完成差勤模組轉換上線。</li>
-                            <li>擔任系統供應商合約溝通及行政事務的技術窗口，並建立SOP與記錄文件，減少行政處理與溝通時間。</li>
-							<li>建置網站自動化測試工具與腳本設計，減少測試人工介入與測試步驟並留存測試記錄。</li>
+                            <li>輔助 HRIS 核心系統轉換專案，接手差勤模組轉換上線，在2個月完成轉換改寫，並提升系統穩定性 25%。</li>
+                            <li>擔任系統供應商合約溝通窗口，建立 5+ SOP / 系統文件，減少行政處理時間 40%。</li>
+			    <li>開發網站自動化測試工具，設計 5+ 測試腳本，降低人工介入測試步驟 80%，並提升測試準確率至 98%。</li>
                         </ul>
                         <div class="tags">
                             <span>#MVC</span><span>#CSharp</span><span>#JavaScript</span><span>#MSSQL</span><span>#VB.Net</span>
@@ -269,8 +269,8 @@
                             <div class="job-date">May 2021 – April 2023</div>
                         </div>
                         <ul>
-                            <li>主導 CRM、業務管理及決策支援系統的全端開發，提升業務端執行效率，並供決策長官快速獲得公司營運狀況。</li>
-                            <li>負責 WebApi 串接，進行數據整理與調校，並產出分析報表。</li>
+                            <li>CRM、EIS 系統全端開發，提升業務執行效率 20%，並協助高層快速獲得公司營運狀況，縮短決策時間至 1 天。</li>
+                            <li>整合EC與股務數據資料開發 WebApi 數據串接，整理10+ 支查詢，調校報表生成縮短超過 20%以上時間。</li>
                         </ul>
                         <div class="tags">
                            <span>#Vue.Js</span><span>#JavaScript</span><span>#CSharp</span><span>#MSSQL</span><span>#PLSQL</span>
@@ -285,8 +285,9 @@
                             <div class="job-date">April 2020 – April 2021</div>
                         </div>
                         <ul>
-                            <li>開發客戶官網後台與前台資料串接、企業 LineBot 行銷後台，幫助大型企業數位行銷成效。</li>
-                            <li>支援客戶行銷活動，參與技術發展研究團隊。研究主題：人像生成模型</li>
+                            <li>開發企業 LineBot 行銷後台，協助 2+ 大型企業提升數位行銷成效，觸及用戶數增加 20%。</li>
+                            <li>開發企業官方網站，使用後台設定生成模式，企業依現況彈性設定網站內容，即時訊息推廣達 100%。</li>
+                            <li>參與技術研究團隊，研究人像生成模型，成功生成 10+ 高精度人像樣本。</li>
                         </ul>
                         <div class="tags">
                            <span>#PHP</span><span>#JavaScript</span><span>#CSharp</span><span>#SQL</span><span>#AMS</span><span>#LineBot</span>
@@ -301,8 +302,8 @@
                             <div class="job-date">April 2016 – April 2020</div>
                         </div>
                         <ul>
-                            <li>負責業助下單系統、募集系統與管理分析報表開發維運，協助基金事務工作系統化。</li>
-                            <li>研究 OCR 辨識、聊天機器人、RPA自動化、預測模型等 PoC專案。</li>
+                            <li>負責股務相關作業，開發業助下單系統，縮短下單流程時間 50%，維運募集系統完成 20+ 筆基金募集作業與分析報表。</li>
+                            <li>主導RPA、聊天機器人等 PoC 專案，成功完成問答服務，減少系統操作問題人工處理時間 40%。</li>
                         </ul>
                         <div class="tags">
                            <span>#Delphi</span><span>#CSharp</span><span>#MSSQL</span><span>#PLSQL</span><span>#Python</span><span>#JavaScript</span>
@@ -317,8 +318,8 @@
                             <div class="job-date">Feb 2012 – April 2015</div>
                         </div>
                         <ul>
-                            <li>進銷存系統開發與週邊串接，使產品生產過程能提高掌握度。</li>
-                            <li>企業入口網開發與維護，提供可靠平台供同仁使用。</li>
+                            <li>開發進銷存系統，提升生產掌握度 30%，並成功串接 5+ 周邊系統。</li>
+                            <li>維護企業入口網，確保平台穩定性達 99.9%，並提升員工滿意度。</li>
                         </ul>
                         <div class="tags">
                            <span>#MVC</span><span>#CSharp</span><span>#MSSQL</span>
@@ -333,8 +334,8 @@
                             <div class="job-date">August 2009 – Feb 2012</div>
                         </div>
                         <ul>
-                            <li>負責出貨標籤系統客製系統，降低出貨逾時問題與提升正確性。</li>
-                            <li>產線問題解決，使產線運作順暢保持24小時正常運作。</li>
+                            <li>客製化出貨標籤系統，降低出貨逾時率至 1%，並提升出貨準確性至 98%。</li>
+                            <li>解決產線問題，確保 24 小時正常運作，減少停工時間 20%。</li>
                         </ul>
                         <div class="tags">
                            <span>#ClientServer</span><span>#VB</span><span>#CSharp</span><span>#PLSQL</span>
