--- a/index_pdf.html
+++ b/index_pdf.html
@@ -200,7 +200,7 @@
                 <h2>About Me</h2>
                 <div class="section-content">
                     <p>
-                        擁有 7 年金融業系統問題解決與建構經歷的軟體工程師。專長使用C#、VueJs建構企業 Web 應用程式、Web API、MSSQL數據處理與調校，
+                        擁有 7 年金融業系統問題解決與建構經歷的軟體工程師，期間考取證券高級業務員、投信投顧業務員、期貨業務員證照。專長使用C#、VueJs建構企業 Web 應用程式、Web API、MSSQL數據處理與調校，
 						以及核心系統轉換等領域擁有豐富經驗外，我對人工智慧充滿熱忱，並將其應用於實際專案中。
                     </p>
                     <p>
