--- a/index_pdf.html
+++ b/index_pdf.html
@@ -184,6 +184,7 @@
 
     <div class="resume-container">
         <header>
+            <img src="your-photo-url.jpg" alt="Tobey Wang" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
             <h1>王靖瑤 (Tobey Wang)</h1>
             <div class="header-info">
                 <p class="title">Full Stack Engineer | Web Developer | ML Engineer</p>
