--- a/index_pdf.html
+++ b/index_pdf.html
@@ -184,7 +184,7 @@
 
     <div class="resume-container">
         <header>
-            <img src="S__14229507.jpg" alt="Tobey Wang" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+            <img src="images/S__14229507.jpg" alt="Tobey Wang" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
             <h1>王靖瑤 (Tobey Wang)</h1>
             <div class="header-info">
                 <p class="title">Full Stack Engineer | Web Developer | ML Engineer</p>
