--- a/index_pdf.html
+++ b/index_pdf.html
@@ -35,6 +35,17 @@
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             border-radius: 8px;
         }
+        header {
+            text-align: center; /* 將圖片和文字置中 */
+        }
+	header img {
+            width: 150px; /* 圖片寬度 */
+            height: 150px; /* 圖片高度 */
+            border-radius: 50%; /* 圖片裁剪為正圓形 */
+            margin-bottom: 15px; /* 圖片與姓名之間的間距 */
+            border: 3px solid var(--accent-color); /* 圖片外框 */
+            object-fit: cover; /* 確保圖片內容完整且不變形 */
+        }
         h1, h2 {
             font-weight: 700;
         }
@@ -86,14 +97,6 @@
             font-size: 1.2em;
             color: var(--accent-color);
             font-weight: 600;
-        }
-	.header img {
-            width: 150px; /* 圖片寬度 */
-            height: 150px; /* 圖片高度 */
-            border-radius: 50%; /* 圖片裁剪為正圓形 */
-            margin-bottom: 15px; /* 圖片與姓名之間的間距 */
-            border: 3px solid var(--accent-color); /* 圖片外框 */
-            object-fit: cover; /* 確保圖片內容完整且不變形 */
         }
         
         .section-content {
