--- a/index_pdf.html
+++ b/index_pdf.html
@@ -167,7 +167,7 @@
 	    <!-- 大頭照 -->
 	    <img src="images/S__14229507.jpg" alt="Tobey Wang">
 	    <!-- 姓名 -->
-	    <h1>王靖瑤 (Tobey Wang)</h1>
+	    <h1>王靖瑤</h1>
 	    <!-- 職位與聯繫資訊 -->
 	    <div class="header-info">
 		<p class="title">Full Stack Engineer | Web Developer | ML Engineer</p>
