--- a/index_pdf.html
+++ b/index_pdf.html
@@ -340,11 +340,10 @@
                             <div class="job-date">2017 – 2019</div>
                         </div>
                         <ul>
-                            <li>研究機器學習演算法，應用於台灣股市預測並產出高品質模型。</li>
-                            <li>實作關於辨識、預測、對話等不同領域的 Side Project。</li>
+                            <li>研究機器學習演算法，應用於台灣股市預測並產出高品質模型，短期報酬率可達 3%。</li>
                         </ul>
                         <div class="tags">
-                            <span>#MachineLearning</span><span>#NeuralNetwork</span><span>#CNN</span><span>#OCR</span><span>#TF-IDF</span><span>#Jieba</span>
+                            <span>#MachineLearning</span><span>#NeuralNetwork</span>
                         </div>
                     </div>
 					<div class="job">
