--- a/index_pdf.html
+++ b/index_pdf.html
@@ -382,23 +382,14 @@
             </section>
 	    <!-- 推薦人區塊 -->
             <section id="references">
-	            <h2>推薦人 (References)</h2>
+	            <h2>References</h2>
 	            <div class="reference">
 	                <!-- 推薦人 1 -->
 	                <div class="reference-item">
-	                    <h3>李大明 (David Lee)</h3>
-	                    <p>職位：技術總監 (Technical Director)</p>
-	                    <p>公司：XYZ 科技股份有限公司</p>
-	                    <p>Email：<a href="mailto:david.lee@xyztech.com">david.lee@xyztech.com</a></p>
-	                    <p>電話：+886-912-345-678</p>
-	                </div>
-	                <!-- 推薦人 2 -->
-	                <div class="reference-item">
-	                    <h3>陳小美 (Amy Chen)</h3>
-	                    <p>職位：資深工程師 (Senior Engineer)</p>
-	                    <p>公司：ABC 新創公司</p>
-	                    <p>Email：<a href="mailto:amy.chen@abcstartup.com">amy.chen@abcstartup.com</a></p>
-	                    <p>電話：+886-987-654-321</p>
+	                    <h3>張建城</h3>
+	                    <p>職位：協理</p>
+	                    <p>公司：元大投信</p>
+	                    <p>電話：+886-922-052-218</p>
 	                </div>
 	            </div>
             </section> 
