--- a/index_pdf.html
+++ b/index_pdf.html
@@ -206,7 +206,7 @@
                 <h2>About Me</h2>
                 <div class="section-content">
                     <p>
-                        擁有 7 年金融業系統問題解決與建構經歷的軟體工程師，期間考取證券高級業務員、投信投顧業務員、期貨業務員證照。專長使用C#、VueJs建構企業 Web 應用程式、Web API、MSSQL數據處理與調校，
+                        擁有 7 年金融業系統問題解決與建構經歷的軟體工程師，期間考取證券高級業務員、投信投顧業務員、期貨業務員等證照。專長使用C#、VueJs建構企業 Web 應用程式、Web API、MSSQL數據處理與調校，
 						以及核心系統轉換等領域擁有豐富經驗外，我對人工智慧充滿熱忱，並將其應用於實際專案中。
                     </p>
                     <p>
@@ -258,7 +258,7 @@
                             <div class="job-date">May 2023 – Present</div>
                         </div>
                         <ul>
-                            <li>輔助 HRIS 核心系統轉換專案，接手差勤模組轉換上線，在2個月完成轉換改寫，並提升系統穩定性 25%。</li>
+                            <li>輔助 HRIS 核心系統轉換專案，接手差勤模組轉換上線，在2個月完成周邊系統改寫，並提升系統穩定性 25%。</li>
                             <li>擔任系統供應商合約溝通窗口，建立 5+ SOP / 系統文件，減少行政處理時間 40%。</li>
 			    <li>開發網站自動化測試工具，設計 5+ 測試腳本，降低人工介入測試步驟 80%，並提升測試準確率至 98%。</li>
                         </ul>
@@ -356,7 +356,7 @@
                     <div class="job">
                         <div class="job-header">
                             <div>
-                                <h3>Master's Degree, Computer Science</h3>
+                                <h3>Master's Degree, 資訊科學所</h3>
                                 <div class="job-company">國立台北教育大學</div>
                             </div>
                             <div class="job-date">2017 – 2019</div>
@@ -371,7 +371,7 @@
 					<div class="job">
                         <div class="job-header">
                             <div>
-                                <h3>bachelor's Degree, Department of Information Management</h3>
+                                <h3>bachelor's Degree, 資管系</h3>
                                 <div class="job-company">南台科技大學</div>
                             </div>
                             <div class="job-date">2005 – 2009</div>
