--- a/index_pdf.html
+++ b/index_pdf.html
@@ -189,6 +189,10 @@
 	    h2 {
 	        font-size: 1.4em; /* 縮小副標題字體 */
 	    }
+	    #education {
+        	page-break-before: always; /* 強制在列印時換頁 */
+	    }
+    }
         }
     </style>
 </head>
@@ -359,7 +363,6 @@
                     </div>
                 </div>
             </section>
-            <section></section>
             <section id="education">
                 <h2>Education</h2>
                 <div class="section-content">
