--- a/index_pdf.html
+++ b/index_pdf.html
@@ -384,7 +384,7 @@
 					<div class="job">
                         <div class="job-header">
                             <div>
-                                <h3>bachelor's Degree, 資管系</h3>
+                                <h3>bachelor's Degree, 資訊管理系</h3>
                                 <div class="job-company">南台科技大學</div>
                             </div>
                             <div class="job-date">2005 – 2009</div>
@@ -393,6 +393,61 @@
                     </div>
                 </div>
             </section>
+            
+            <!-- AI專案 -->
+            <section id="projects">
+            <h2>Lab</h2>
+            <div class="section-content">
+                <div class="job">
+                    <div class="job-header">
+                        <div>
+                            <h3>LineBot_基金資訊平台</h3>
+                            <div class="job-company">第三屆LineBot對話機器人設計大賽</div>
+                        </div>
+                    </div>
+                    <p><strong>描述：</strong>基金多樣資訊查詢、不同角度評量基金績效與排序、線上線下申購地圖、投資試算計劃。</p>
+                    <p><strong>技術棧：</strong>Python、MessagingAPI、Flask</p>
+                    <img src="Mansky_Line1.PNG" alt="LineBot_基金資訊平台">
+                    <div class="tags">
+                        <span>#爬蟲</span>
+                    </div>
+                </div> 
+            </div>
+            <div class="section-content">
+                <div class="job">
+                    <div class="job-header">
+                        <div>
+                            <h3>聊天機器人平台</h3>
+                            <div class="job-company">百大常見問題庫的聊天機器人建置與智能問答</div>
+                            <div class="job-company">洗錢防制名單自動比對掃描</div>
+                        </div>
+                    </div>
+                    <p><strong>描述：</strong><p>運用 KeyBERT 結合 Jieba 進行中文斷詞，從多篇文章中自動萃取關鍵字（Hashtag）。</p>
+                    <p>利用 gensim 函式庫建立 LSI（Latent Semantic Indexing）模型，進行文本主題建模與相似度分析。</p>
+                    <p><strong>技術棧：</strong>Python、Jieba、TF-IDF</p>
+                    <div class="tags">
+                        <span>#語意分析</span>
+                    </div>
+                </div> 
+            </div>
+            <div class="section-content">
+            <div class="job">
+                <div class="job-header">
+                    <div>
+                        <h3>人臉辨識系統開發</h3>
+                    </div>
+                </div>
+                <p><strong>描述：</strong><p>結合 Pillow 與 OpenCV 進行影像處理</p>
+                <p>利用卷積神經網路（CNN）建立人臉辨識模型。</p>
+                <p><strong>技術棧：</strong>Python、CNN、OpenCV</p>
+                <img src="Pillow_Model1.PNG" alt="人臉辨識系統開發">
+                <div class="tags">
+                    <span>#影像辨識</span>
+                </div>
+            </div> 
+        </div>
+                
+        </section>
 	    <!-- 推薦人區塊 -->
             <section id="references">
 	            <h2>References</h2>
